; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/extr_mixed.c_setup_prefix_query.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/extr_mixed.c_setup_prefix_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_7__ = type { i16, i32, i32 }

@expand_id_test_data = common dso_local global %struct.TYPE_8__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__**, i64*)* @setup_prefix_query to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setup_prefix_query(%struct.TYPE_7__** %0, i64* %1) #0 {
  %3 = alloca %struct.TYPE_7__**, align 8
  %4 = alloca i64*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.TYPE_7__*, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_7__** %0, %struct.TYPE_7__*** %3, align 8
  store i64* %1, i64** %4, align 8
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** @expand_id_test_data, align 8
  %11 = call i64 @ARRAY_SIZE(%struct.TYPE_8__* %10)
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call %struct.TYPE_7__* @git__calloc(i64 %12, i32 12)
  store %struct.TYPE_7__* %13, %struct.TYPE_7__** %5, align 8
  %14 = call i32 @cl_assert(%struct.TYPE_7__* %13)
  store i64 0, i64* %7, align 8
  br label %15

15:                                               ; preds = %49, %2
  %16 = load i64, i64* %7, align 8
  %17 = load i64, i64* %6, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %52

19:                                               ; preds = %15
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %21 = load i64, i64* %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %20, i64 %21
  store %struct.TYPE_7__* %22, %struct.TYPE_7__** %8, align 8
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** @expand_id_test_data, align 8
  %24 = load i64, i64* %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i64 %24
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i64 @strlen(i32 %27)
  store i64 %28, i64* %9, align 8
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 2
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** @expand_id_test_data, align 8
  %32 = load i64, i64* %7, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 4
  %36 = load i64, i64* %9, align 8
  %37 = call i32 @git_oid_fromstrn(i32* %30, i32 %35, i64 %36)
  %38 = load i64, i64* %9, align 8
  %39 = trunc i64 %38 to i16
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %41 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %40, i32 0, i32 0
  store i16 %39, i16* %41, align 4
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** @expand_id_test_data, align 8
  %43 = load i64, i64* %7, align 8
  %44 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i64 %43
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %48 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %47, i32 0, i32 1
  store i32 %46, i32* %48, align 4
  br label %49

49:                                               ; preds = %19
  %50 = load i64, i64* %7, align 8
  %51 = add i64 %50, 1
  store i64 %51, i64* %7, align 8
  br label %15

52:                                               ; preds = %15
  %53 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %54 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %3, align 8
  store %struct.TYPE_7__* %53, %struct.TYPE_7__** %54, align 8
  %55 = load i64, i64* %6, align 8
  %56 = load i64*, i64** %4, align 8
  store i64 %55, i64* %56, align 8
  ret void
}

declare dso_local i64 @ARRAY_SIZE(%struct.TYPE_8__*) #1

declare dso_local i32 @cl_assert(%struct.TYPE_7__*) #1

declare dso_local %struct.TYPE_7__* @git__calloc(i64, i32) #1

declare dso_local i64 @strlen(i32) #1

declare dso_local i32 @git_oid_fromstrn(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
